tests/fixtures/valid/resources/views/valid-has.blade.php
<?php

{{ Config::has('app.valid_key') }}
